--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
             <div id="question-container"></div>
             <button id="next-btn" style="display:none;" onclick="nextQuestion()">Question suivante</button>
         </section>
+        <section>
+    <h2>Présentation vidéo : La Méthode GTD</h2>
+    <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@toujourspluso/video/7444223381915880737" data-video-id="7444223381915880737" style="max-width: 605px;min-width: 325px;">
+        <section>
+            <a target="_blank" title="@toujourspluso" href="https://www.tiktok.com/@toujourspluso?refer=embed">@toujourspluso</a>
+            <p>Ep. 7 : La Méthode GTD (Getting Things Done)</p>
+            <a target="_blank" title="♬ son original  - Jheryl ❘ Toujours +O" href="https://www.tiktok.com/music/son-original-Jheryl-❘-Toujours-O-7444223439482981153?refer=embed">♬ son original  - Jheryl ❘ Toujours +O</a>
+        </section>
+    </blockquote>
+    <script async src="https://www.tiktok.com/embed.js"></script>
+</section>
     </main>
 
     <footer>
